# codex-image

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
docs/: image-workflows.md
skills/codex-image/: SKILL.md
skills/codex-image/agents/: openai.yaml
skills/codex-image/references/: cli.md  codex-network.md  image-api.md  prompting.md  sample-prompts.md
skills/codex-image/scripts/: codex-image  codex-image.cmd  codex_image.py  edit.cmd  edit.sh  generate-batch.cmd  generate-batch.sh  generate.cmd  generate.sh
skills/codex-image/tests/: test_size_normalization.py
tests/: test_size_normalization.py  test_transport_regressions.py
