[project]
name = "codex-image"
version = "0.1.0"
description = "Codex skill for OpenAI Images API generation and editing in API key mode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "IanShaw027" }]
keywords = [
  "codex",
  "codex-skill",
  "image-generation",
  "openai",
  "openai-images-api",
  "gpt-image-2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/IanShaw027/codex-image"
Repository = "https://github.com/IanShaw027/codex-image"
Issues = "https://github.com/IanShaw027/codex-image/issues"

[tool.pytest.ini_options]
testpaths = ["skills/codex-image/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
